# Taunggyi-City-Church

./: .dockerignore  .env.env.backup  .env.env.rs256_backup  .env.example  .gitignore  Dockerfile  Makefile  README.md  check_env.py  docker-compose.yml  entrypoint.sh  folder_tree.txt  format_keys.py  manage.py  project_init.py  pyproject.toml  requirements.txt  run_async.py  simple_switch_hs256.py
apps/core/cache/: __init__.py  async_cache.py  cache_keys.py  cache_manager.py  decorator.py  keys.py  serializer.py  sync_cache.py
apps/core/caching/: __init__.py  async_cache.py  base.py  keys.py
apps/core/core_exceptions/: __init__.py  base.py  domain.py  domain_exceptions.py  http.py  integration.py
apps/core/core_validators/: decorators.py  exceptions.py  registry.py  rules.py  (+1 more)
apps/tcc/: __init__.py  apps.py
config/: __init__.py  asgi.py  gnix.conf  middleware.py  patches.py  urls.py
config/settings/: base.py  base.py.backup  cache_config.py  dev.py  prod.py  security.py
env_check script/: debug_env.py
helpers/: error_monitor.py  filters.py  handlers.py  loggers.py
helpers/excepitons/: base_exception.py  configure_management.py  database_integration.py  django_exceptions.py  domain_exceptons.py  error_monitor.py  handlers.py  loggers.py
helpers/validations/: decorators.py  exceptons.py  registry.py  rules.py  schemas.py  valdiaiton_context.py
helpers/validators/: exceptions.py  registry.py  rules.py
jwt_scripts/: debug_jwt.py  generate_jwt_keys.py  jwt_hs256.py  simplify_jwt.py  vaerity_jwt_keys.py
requirements/: requirements.txt
(+264 files in other folders)
