[project]
name = "church-backend"
version = "0.1.0"
description = "Django backend for church web app"
requires-python = ">=3.11"
dependencies = [
    "Django>=5.0,<6.0",
    "django-environ>=0.11.2",
    "mysqlclient>=2.2.0",
    "gunicorn>=22.0.0",
    "whitenoise>=6.6.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "pre-commit>=3.7.0",
    "ruff>=0.5.0",
    "pytest>=8.1.1",
    "pytest-django>=4.8.0",
    "pytest-cov>=5.0.0",
    "coverage>=7.4.0",
    "django-extensions>=3.2.3",
]
